Uploading Files Final

--- a/databases.ini
+++ b/databases.ini
@@ -3,7 +3,7 @@ host=localhost
 port=5432
 database=insights
 user=postgres
-password=#4BobbyOrr
+password=123456Rw*
 
 [azure]
 driver={ODBC Driver 13 for SQL Server}
@@ -11,4 +11,4 @@ host=tsi-insights.database.windows.net
 port=1433
 database=insights
 user=insights_admin
-password=97a101e105i#
+password=123456Rw*
